# conan-fgw

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
conan_fgw/config/schnet/property_regression/bace/: bace_5.yaml  bace_5_bc.yaml
conan_fgw/config/schnet/property_regression/esol/: esol_5.yaml  esol_5_bc.yaml
conan_fgw/config/schnet/property_regression/freesolv/: freesolv_10.yaml  freesolv_5_bc.yaml
conan_fgw/config/schnet/property_regression/lipo/: lipo_3.yaml  lipo_3_bc.yaml  lipo_5.yaml  lipo_5_bc.yaml
conan_fgw/config/visnet/property_regression/esol/: esol_5.yaml  esol_5_bc.yaml
conan_fgw/config/visnet/property_regression/lipo/: lipo_3_bc.yaml
conan_fgw/script/: run.sh  run_conan_fgw_only.sh  run_conan_fgw_pre_only.sh  run_interact.sh
conan_fgw/src/: config_parser.py  experiments.py  train_val.py  trainer.py  utils.py
conan_fgw/src/data/: datamodules.py  datasets.py  splitters.py
conan_fgw/src/data/conformers/: features.py  generators.py
conan_fgw/src/model/: attention_layer.py  baseline_models.py  common.py  features.py  schnet_based_models.py  utils.py
conan_fgw/src/model/fgw/: barycenter.py  bregman.py  gm_wrapper.py  sinkhorn.py  utils.py
conan_fgw/src/model/graph_embeddings/: dimenet.py  esan.py  gat.py  schnet_no_sum.py  torch_geometric_visnet.py  visnet.py
notebooks/: fgw.ipynb
notebooks/data/: cfm_log.pt
