[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "conan_fgw"
version = "0.0.1"
description = "[ICML 2024] Structure-Aware E(3)-Invariant Molecular Conformer Aggregation Networks"
authors = [
  { name = "DFKI" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.9"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["conan_fgw"]
force_sort_within_sections = true
